LRDOCS-8379 Going to use Foo, Goo, Hoo, Joo, Koo etc. See https://dev.to/warrend/no-more-foo-bar-and-baz-56j4 and https://en.wikipedia.org/wiki/List_of_military_slang_terms#:~:text=FUBAR%20(Fucked%2FFouled%20Up%20Beyond,citation%3A%20%22The%20FUBAR%20squadron.
